# tournament

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 976d789998e6_initial_migrations.py
app/: config.py  db.py  main.py
app/api/: tournament.py
app/models/: player.py  registration_card.py  tournament.py
app/repositories/: tournament.py  tournament_registration.py
app/schemas/: pagination.py  tournament.py
tests/: conftest.py  mocks_players.json  mocks_registration_cards.json  mocks_tournaments.json
tests/integration_tests/: test_api.py
