[tool.poetry]
name = "tournament"
version = "0.1.0"
description = ""
authors = ["Timurxboy <timurxboy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncpg = "0.30.0"
greenlet = "3.2.2"
alembic = "1.15.2"
annotated-types = "0.7.0"
anyio = "4.9.0"
certifi = "2025.4.26"
click = "8.1.8"
dnspython = "2.7.0"
email-validator = "2.2.0"
fastapi = "0.115.12"
fastapi-cli = "0.0.7"
h11 = "0.16.0"
httpcore = "1.0.9"
httptools = "0.6.4"
httpx = "0.28.1"
idna = "3.10"
itsdangerous = "2.2.0"
jinja2 = "3.1.6"
mako = "1.3.10"
markdown-it-py = "3.0.0"
markupsafe = "3.0.2"
mdurl = "0.1.2"
orjson = "3.10.18"
pydantic = {extras = ["mypy"], version = "^2.11.4"}
pydantic-extra-types = "2.10.4"
pydantic-settings = "2.9.1"
pydantic-core = "2.33.2"
pygments = "2.19.1"
python-dotenv = "1.1.0"
python-multipart = "0.0.20"
pyyaml = "6.0.2"
rich = "14.0.0"
rich-toolkit = "0.14.5"
shellingham = "1.5.4"
sniffio = "1.3.1"
sqlalchemy = "2.0.40"
starlette = "0.46.2"
typer = "0.15.3"
typing-inspection = "0.4.0"
typing-extensions = "4.13.2"
ujson = "5.10.0"
uvicorn = "0.34.2"
uvloop = "0.21.0"
watchfiles = "1.0.5"
websockets = "15.0.1"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
mypy = "^1.15.0"
ruff = "^0.11.9"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
plugins = ['pydantic.mypy']